Fix phone number alignment

--- a/public/media/css/master.scss
+++ b/public/media/css/master.scss
@@ -1540,10 +1540,9 @@ main > section {
   &__phone {
     position: absolute;
     top: -15px;
-    left: 50%;
+    left: 0;
     display: none;
     padding: 2px 4px;
-    transform: translateX(-50%);
     border: 1px solid #e6e8eb;
     border-radius: 4px;
     background-color: #fff;
